--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.12.1",
+    "@babel/register": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/puppeteer": "^5.4.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "chalk": "^4.1.0",
     "prop-types": "^15.7.2",
+    "puppeteer": "^5.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
