--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "chalk": "^4.1.0",
+    "ignore-styles": "^5.0.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^5.5.0",
     "react": "^17.0.1",
@@ -22,11 +23,12 @@
     "react-scripts": "4.0.0-next.98",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "regenerator-runtime": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": ""
+    "build": "node server/bootstrap.js"
   },
   "eslintConfig": {
     "extends": [
