--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +19,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "chalk": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "ignore-styles": "^5.0.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^5.5.0",
@@ -21,10 +27,10 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
+    "regenerator-runtime": "latest",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4",
-    "regenerator-runtime": "latest"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
