--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^4.1.0",
     "font-awesome": "^4.7.0",
     "ignore-styles": "^5.0.1",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^5.5.0",
     "react": "^17.0.1",
